@@ -182,7 +182,7 @@ public class DeleteDuplicates extends ToolBase
           return false;
 
         // skip deleted documents
-        while (indexReader.isDeleted(doc) && doc < maxDoc) doc++;
+        while (doc < maxDoc && indexReader.isDeleted(doc)) doc++;
         if (doc >= maxDoc)
           return false;
 
